<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/name"
            android:padding="12dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/name"
            android:inputType="text" />

        <TextView
            android:id="@+id/quantityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textAllCaps="true"
            android:layout_marginLeft="16dp"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp" />

        <Button
            android:onClick="increaseCup"
            android:id="@+id/increaseButton"
            android:text="@string/increase"
            android:textSize="20sp"
            android:layout_marginLeft="16dp"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/quantityText"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/showQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:layout_marginLeft="16dp"
            android:textSize="30sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/quantityText"
            app:layout_constraintLeft_toRightOf="@id/increaseButton"
            app:layout_constraintRight_toLeftOf="@id/decreaseButton"
            android:layout_marginStart="16dp" />

        <Button
            android:onClick="decreaseCup"
            android:id="@+id/decreaseButton"
            android:text="@string/decrease"
            android:textSize="20sp"
            android:layout_marginLeft="16dp"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/quantityText"
            app:layout_constraintLeft_toRightOf="@id/showQuantity"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/priceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textAllCaps="true"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/chocolateCream"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/perCup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:text="@string/_5"
            app:layout_constraintTop_toBottomOf="@id/priceText"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" />

        <CheckBox
            android:id="@+id/whippedCream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whipped_cream"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/increaseButton"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" />

        <CheckBox
            android:id="@+id/chocolateCream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chocolate_cream"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/whippedCream"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" />

        <Button
            android:onClick="OrderSum"
            android:id="@+id/orderSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/perCup"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>